force-app/main/default/objects/SOLXYZCSO001__ReportClowdSettings__c/SOLXYZCSO001__ReportClowdSettings__c.object-meta.xml
<CustomObject>
    <description>ReportClowdSettings</description>
    <label>帳票クラウド設定</label>
    <nameField>
        <displayFormat>X-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>