force-app/main/default/objects/SOLXYZCSO001__ReportClowdSettings__c/fields/SOLXYZCSO001__EstimateNumberingPattern__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__EstimateNumberingPattern__c</fullName>
    <description>見積書番号の自動採番パターン</description>
    <label>見積書番号自動採番パターン</label>
    <length>30</length>
    <type>Text</type>
</CustomField>