force-app/main/default/objects/SOLXYZCSO001__ReportClowdSettings__c/fields/SOLXYZCSO001__InvoiceNumberingCount__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__InvoiceNumberingCount__c</fullName>
    <label>請求書自動採番番号</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>