force-app/main/default/objects/SOLXYZCSO001__ReportClowdSettings__c/fields/SOLXYZCSO001__InvoiceNumberingPattern__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__InvoiceNumberingPattern__c</fullName>
    <label>請求書番号自動採番パターン</label>
    <length>30</length>
    <type>Text</type>
</CustomField>