force-app/main/default/objects/SOLXYZCSO001__ReportClowdSettings__c/fields/SOLXYZCSO001__SettingItem__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SettingItem__c</fullName>
    <label>設定項目</label>
    <length>10</length>
    <type>Text</type>
</CustomField>